--- a/style.css
+++ b/style.css
@@ -13,6 +13,17 @@
     text-align: center;
 }
 
+li a {
+    color: #eb7a77;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #bbbbbb2f;
+    background-size: 110%;
+    border-radius: 5px;
+}
+
 #pagetitle {
     color: white;
     /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
@@ -72,7 +83,8 @@
     text-align: right;
     width: 100%;
     background-image: url("./res/music.png");
-    background-size: 125%;
+    /* background-size: 125%; */
+    background-size: cover;
     background-position: top;
     background-repeat: repeat-y;
     border-radius: 8px;
@@ -89,7 +101,8 @@
     text-align: left;
     width: 100%;
     background-image: url("./res/codes.png");
-    background-size: 100%;
+    /* background-size: 100%; */
+    background-size: cover;
     background-position: top;
     background-repeat: repeat-y;
     border-radius: 8px;
@@ -106,7 +119,8 @@
     text-align: right;
     width: 100%;
     background-image: url("./res/cockpit.jpg");
-    background-size: 100%;
+    /* background-size: 100%; */
+    background-size: cover;
     background-position: top;
     background-repeat: repeat-y;
     border-radius: 8px;
@@ -123,7 +137,8 @@
     text-align: left;
     width: 100%;
     background-image: url("./res/nju.jpg");
-    background-size: 100%;
+    /* background-size: 100%; */
+    background-size: cover;S
     background-position: 100% 80%;
     background-repeat: repeat-y;
     border-radius: 8px;
