--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ li a:hover {
     width: 100%;
     background-image: url("./res/nju.jpg");
     /* background-size: 100%; */
-    background-size: cover;S
+    background-size: cover;
     background-position: 100% 80%;
     background-repeat: repeat-y;
     border-radius: 8px;
