--- a/style.css
+++ b/style.css
@@ -232,3 +232,49 @@ li a:hover {
     font-weight: 800;
     font-size: 56px;
 }
+
+.inner-page-title {
+    text-align: center;
+    font-weight: 600;
+    font-size: 28px;
+}
+
+.apps-block #title {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.apps-block #content {
+    background: linear-gradient(#5a5a5a, #131313);
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.apps-block #content img {
+    margin: 16px;
+    border-radius: 8px;
+}
+
+.apps-block #content .details {
+    padding: 16px;
+    font-size: 14px;
+}
+
+.apps-block #content .details .detail-link {
+    color: white;
+    /* position: absolute;
+    left: 60%;
+    top: 320px; */
+    text-decoration: none;
+}
+
+.apps-block #content .details p {
+    color: white;
+}
+
+.apps-block #content .details .detail-link :hover {
+    color:#bbbbbb2f;
+}
