--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ li a:hover {
 #music {
     text-align: right;
     width: 100%;
-    background-image: url("./res/music.png");
+    background-image: url("./res/music.jpg");
     /* background-size: 125%; */
     background-size: cover;
     background-position: top;
