--- a/style.css
+++ b/style.css
@@ -1,3 +1,64 @@
+@font-face {
+    font-family: SF Mono;
+    src: url("./res/fonts/SFMonoRegular.otf");
+}
+
+@media screen and (max-width:320px) {
+    html {
+        font-size: 12px;
+    }
+
+    .content {
+        margin: 8px;
+    }
+
+    .preview {
+        width: 80%;
+        height: auto;
+    }
+}
+
+@media screen and (min-width:321px) and (max-width:750px) {
+    html {
+        font-size: 14px;
+    }
+
+    .content {
+        margin: 24px;
+    }
+
+    .preview {
+        width: 40%;
+        height: auto;
+    }
+    
+    .apps-block #content {
+        display: flex;
+        align-items: center;
+    }
+
+}
+
+@media screen and (min-width:751px) {
+    html {
+        font-size: 16px;
+    }
+
+    .content {
+        margin: 40px;
+    }
+    
+    .preview {
+        width: 60%;
+        height: auto;
+    }
+
+    .apps-block #content {
+        display: flex;
+        align-items: center;
+    }
+}
+
 .banner {
     /* background-color: #eb7a77; */
     background: linear-gradient(#eb7a77, #ef5e59);
@@ -44,10 +105,6 @@ li a:hover {
 .ans .sub {
     font-size: 18px;
     font-weight: 700;
-}
-
-.ans, #divcontent {
-    /* font-family: 'Times New Roman', Times, serif; */
 }
 
 .about-myself {
@@ -279,58 +336,77 @@ li a:hover {
     margin: 4px;
 }
 
-@media screen and (max-width:320px) {
-    html {
-        font-size: 12px;
-    }
-
-    .content {
-        margin: 8px;
-    }
-
-    .preview {
-        width: 80%;
-        height: auto;
-    }
+#musicplayer {
+    position: fixed;
+    bottom: 10px;
+    left: 5px;
+    opacity: 0.7;
+    z-index: 999;
+    border-radius: 16px;
 }
 
-@media screen and (min-width:321px) and (max-width:750px) {
-    html {
-        font-size: 14px;
-    }
-
-    .content {
-        margin: 24px;
-    }
-
-    .preview {
-        width: 40%;
-        height: auto;
-    }
-    
-    .apps-block #content {
-        display: flex;
-        align-items: center;
-    }
-
+#diary-background {
+    background-image: url("./res/diary-draft.png");
 }
 
-@media screen and (min-width:751px) {
-    html {
-        font-size: 16px;
-    }
+.cover-background {
+    border-radius: 8px;
+    float: left;
+    height: 380px;
+    width: 100%;
+    background-size: cover;
+    background-position:center;
+    background-repeat:no-repeat;
+    background-size:cover;
+    -webkit-filter: blur(9px);
+    -moz-filter: blur(9px);
+    -o-filter: blur(9px);
+    -ms-filter: blur(9px);
+    filter:blur(9px);
+}
 
-    .content {
-        margin: 40px;
-    }
-    
-    .preview {
-        width: 60%;
-        height: auto;
-    }
+#diary-trailer {
+    position: absolute;
+    top: 250px;
+    left: 0px;
+    right: 0px;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 400px;
+}
 
-    .apps-block #content {
-        display: flex;
-        align-items: center;
-    }
+#diary-trailer p {
+    text-align: center;
+    color: #ffffffcf;
+    font-family: SF Mono;
+    font-size: 20px;
+}
+
+#diary-trailer .title {
+    font-size: 40px;
+}
+
+#diary-trailer span {
+    color: #0000006f;
+}
+
+.music-title {
+    border: 20px;
+    margin: 20px;
+    font-weight: 700;
+    font-size: 22px;
+    text-align: center;
+}
+
+.music-cover {
+    text-align: center;
+    align-items: center;
+}
+
+.music-cover img {
+    border-radius: 8px;
+    box-shadow: 5px 5px 7px 1px #bbb;
+    display: inline-block;
+    width: 220px;
 }
