--- a/style.css
+++ b/style.css
@@ -46,9 +46,9 @@ li a:hover {
     font-weight: 700;
 }
 
-.ans, #divcontent {
+/* .ans, #divcontent { */
     /* font-family: 'Times New Roman', Times, serif; */
-}
+/* } */
 
 .about-myself {
     font-size: 15px;
