--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,5 +3,5 @@ import Layout from '~/layouts/Layout.astro'
 ---
 
 <Layout>
-  <h1 class="inline-block m-auto p-4 text-accent text-4xl">404</h1>
+  <h1 class="inline-block m-auto p-4 text-accent text-4xl">404 Not Found!</h1>
 </Layout>
